<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#374370"
    android:orientation="vertical"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:textSize="45dp"
        android:background="#fff"
        android:text="0"
        android:textAlignment="center"
        android:editable="false"
        />

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4"
        >
        <Button
            android:id="@+id/clear"
            android:text="@string/clear"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/brackets"
            android:text="@string/wipe"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/percent"
            android:text="@string/percent"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/division"
            android:text="@string/division"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/seven"
            android:text="@string/seven"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/eight"
            android:text="@string/eight"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/nine"
            android:text="@string/nine"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/star"
            android:text="@string/star"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/four"
            android:text="@string/four"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/five"
            android:text="@string/five"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/six"
            android:text="@string/six"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/minus"
            android:text="@string/minus"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/one"
            android:text="@string/one"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/two"
            android:text="@string/two"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/three"
            android:text="@string/three"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/plus"
            android:text="@string/plus"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/signChange"
            android:text="@string/signChange"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/zero"
            android:text="@string/zero"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/dot"
            android:text="@string/dot"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#fff"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
        <Button
            android:id="@+id/equally"
            android:text="@string/equally"
            android:width="95dp"
            android:height="95dp"
            android:textSize="45dp"
            android:gravity="center"
            android:background="#79FF7E"
            android:layout_margin="10px"
            android:onClick="onClick"
            />
    </GridLayout>
</LinearLayout>